# dafioc

./: CMakeLists.txt  README  dafioc.pc.cmake  meson.build
lib/: ErrorDomains.vala  IComponentAdapter.vala  IContainer.vala  meson.build
lib/Adapters/: AbstractComponentAdapter.vala  CachingComponentAdapter.vala  IComponentAdapterFactory.vala
po/: CMakeLists.txt
src/: CMakeLists.txt  IContainerRegistrar.vala
src/Adapters/: ConstructorInjectionComponentAdapter.vala  ConstructorInjectionComponentAdapterFactory.vala  DecoratingComponentAdapter.vala  DefaultComponentAdapterFactory.vala  InstanceComponentAdapter.vala  InstantiatingComponentAdapter.vala
src/Containers/: CachedContainer.vala
test/: CMakeLists.txt  TestMain.vala  meson.build
